ajout de TU et clean visuel

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,30 +1,23 @@
-# Backend configuration
-
 # Server
 PORT=4000
-
-# Logging
-# LOG_LEVEL=info  # Options: error, warn, info, debug
-# LOG_DIR=logs    # Directory for log files (default: logs/)
 
 # Store mode: 'memory' or 'postgres'
 STORE_MODE=postgres
 
-# PostgreSQL configuration (only required if STORE_MODE=postgres)
 DB_HOST=localhost
 DB_PORT=15432
 DB_NAME=electron_chat
 DB_USER=electron_user
 DB_PASSWORD=electron_password
 
-# Ollama configuration (Phase 2.2)
+OLLAMA_DEFAULT_MODEL=llama3.1:8b
+OLLAMA_TIMEOUT_MS=60000
+
 OLLAMA_ENABLED=true
 OLLAMA_URL=http://localhost:11434
-OLLAMA_DEFAULT_MODEL=llama3.1:8b
 
-# Embedding configuration (Phase 6-7)
-# Provider: 'ollama' or 'stub' (defaults to stub if not specified)
+# Fenêtre d'historique envoyée au LLM (pour limiter la taille du prompt)
+LLM_MAX_HISTORY=16
+
 EMBEDDING_PROVIDER=ollama
-# Model to use for embeddings (when using Ollama)
-# Options: nomic-embed-text (768d), mxbai-embed-large (1024d), all-minilm (384d)
 EMBEDDING_MODEL=nomic-embed-text
