Clean d'elements visuelle et ajout d'element pour la démo

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,6 +10,7 @@ DB_NAME=electron_chat
 DB_USER=electron_user
 DB_PASSWORD=electron_password
 
+# other models: llama2:7b, llama2:13b, llama3:8b, llama3:70b, gpt4all-j-v1.3-groovy
 OLLAMA_DEFAULT_MODEL=llama3.1:8b
 OLLAMA_TIMEOUT_MS=60000
 
@@ -20,4 +21,5 @@ OLLAMA_URL=http://localhost:11434
 LLM_MAX_HISTORY=16
 
 EMBEDDING_PROVIDER=ollama
+# Options: nomic-embed-text (768d), mxbai-embed-large (1024d), all-minilm (384d)
 EMBEDDING_MODEL=nomic-embed-text
