--- a/renderer/package.json
+++ b/renderer/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mon-app",
+  "name": "chatbot-maker",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
