--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,6 +17,11 @@ OLLAMA_TIMEOUT_MS=60000
 OLLAMA_ENABLED=true
 OLLAMA_URL=http://localhost:11434
 
+# Warmup: précharger le modèle LLM au démarrage du serveur pour éviter le cold start
+# Le modèle sera chargé en mémoire GPU et y restera (keep_alive=-1)
+# Mettre à 'false' pour désactiver le warmup automatique
+OLLAMA_WARMUP=true
+
 # Fenêtre d'historique envoyée au LLM (pour limiter la taille du prompt)
 LLM_MAX_HISTORY=16
 
