--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@qdrant/js-client-rest": "^1.16.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -25,9 +26,9 @@
     "@types/node": "^20.10.5",
     "@types/pg": "^8.15.6",
     "@types/winston": "^2.4.4",
+    "@vitest/coverage-v8": "^2.1.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3",
-    "vitest": "^2.1.8",
-    "@vitest/coverage-v8": "^2.1.8"
+    "vitest": "^2.1.8"
   }
 }
